# Nvidia-wayland-overclocking-utility

./: .gitignore  CMakeLists.txt  README.md  build.sh  nvoc
src/: main.c  nvml.h
